--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^7.4.2",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
-    "node-linq": "^0.0.5"
+    "node-linq": "^0.0.5",
+    "util": "^0.12.5"
   }
 }
