--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "express": "~4.16.1",
     "express-paginate": "^1.0.2",
     "express-session": "^1.17.3",
+    "express-winston": "^4.2.0",
     "http-errors": "~1.6.3",
     "moment": "^2.29.4",
     "mongoose": "^7.4.2",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "node-linq": "^0.0.5",
-    "util": "^0.12.5"
+    "util": "^0.12.5",
+    "winston": "^3.10.0"
   }
 }
