--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "node-linq": "^0.0.5",
+    "socket.io": "^4.7.2",
     "util": "^0.12.5",
     "winston": "^3.10.0"
   }
