--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.20.2",
     "chart.js": "^4.3.3",
     "connect-mongodb-session": "^3.1.1",
+    "convert-units": "^2.3.4",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
