--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "date-fns": "^3.6.0",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
     "ejs": "~2.6.1",
@@ -31,6 +32,7 @@
     "pdfmake": "^0.2.9",
     "socket.io": "^4.7.2",
     "util": "^0.12.5",
+    "uuid": "^9.0.1",
     "winston": "^3.10.0"
   }
 }
