--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "express-session": "^1.17.3",
     "express-winston": "^4.2.0",
     "http-errors": "~1.6.3",
+    "juice": "^10.0.0",
     "moment": "^2.29.4",
     "mongoose": "^7.4.2",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "node-linq": "^0.0.5",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "pdfmake": "^0.2.9",
     "socket.io": "^4.7.2",
