--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-session": "^1.17.3",
     "express-winston": "^4.2.0",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^9.0.2",
     "juice": "^10.0.0",
     "moment": "^2.29.4",
     "mongoose": "^7.4.2",
