--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "chart.js": "^4.3.3",
