--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.2",
     "pdfmake": "^0.2.9",
+    "sharp": "^0.33.5",
     "socket.io": "^4.7.2",
     "util": "^0.12.5",
     "uuid": "^9.0.1",
