--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.3",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "prestart": "npm install --save",
+    "dev": "nodemon ./bin/www",
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "axios": "^1.7.7",
